--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,9 +1,8 @@
 FROM python:alpine3.7
 COPY . /app
 WORKDIR /app
-RUN apt-get update
-RUN apt-get install -y -q build-essential python-pip python-dev 
+RUN sudo apt-get update
+RUN sudo apt-get install -y -q build-essential python-pip python-dev python-simplejson
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-EXPOSE 5000
 CMD python ./index.py
